/*
 * $Id: ChangeLog,v 1.3036 2004/06/06 19:31:45 bdj Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-06-07 02:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/debug/dbgmenu.prg
    ! Fixed Animate menu item.
  * source/debug/debugger.prg
    ! Don't allow setting breakpoints on FUNCTION lines.

2004-06-07 02:30 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * ChangeLog
    Fix typo in my previous ChangeLog entry.

  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtcrs/gtcrs.c
    Apply HB_EXT_SHIFT_KEYS_CODES for 11 extended shift key codes.
    Note:
    I can't test these two gt, somebody pls kindly test if I broke something.

2004-06-06 21:25 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/gtxvt/gtxvt.c
    * Added new K_SH_* codes.
  * bin/bld.bat
    * Added -lcomdlg32 for mingw32.

2004-06-07 01:30 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * include/inkey.ch
  * source/rtl/gtwin/gtwin.c
  * source/rtl/gtwvt/gtwvt.c
    Usage of these extended shift key codes:
       K_SH_LEFT    K_SH_UP      K_SH_RIGHT   K_SH_DOWN
       K_SH_INS     K_SH_DEL     K_SH_HOME    K_SH_END
       K_SH_PGUP    K_SH_PGDN    K_SH_RETURN  K_SH_ENTER
    are now enabled only if HB_EXT_SHIFT_KEYS_CODES directive is defined.

  /*
  Remarks:

  Thanks to Lorenzo Fiorini, we can now do as follows:

  ch := inkey(0)
  if ch==K_SH_LEFT
     * assume SHIFT+LEFT
  elseif ch==K_LEFT
     * assume LEFT
  endif

  To keep xHarbour 100% Clipper compatible, the above extension is applied
  only if we build xHarbour with HB_EXT_SHIFT_KEYS_CODES defined.

  If you build xHarbour with no HB_EXT_SHIFT_KEYS_CODES, you'll get a Clipper
  compatible behaviour, in which the above 11 inkey codes are not defined.
  Like in old Clipper way, you'll have to check for SHIFT key state to determine